# CoArchitect

./: README.md
architecture-principles-mcp/: README.md  conftest.py  pyproject.toml  requirements.txt
architecture-principles-mcp/references/: DependencyInversion.md  InterfaceSegregation.md  LiskovSubstitution.md  OpenClosed.md  SingleResponsibility.md
architecture-principles-mcp/src/: server.py
architecture-principles-mcp/tests/: test_server.py  test_validator.py  validator.py
co-architect-agent/: .env.example  README.md  co_architect_cli.py
co-architect-agent/.agents/skills/co-architect-skill/: SKILL.md
co-architect-agent/eval-app/: order_processing.py
