[project]
name = "architecture-principles-mcp"
version = "0.1.0"
description = "Model Context Protocol server for software architecture and design principles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
